--- a/ME.html
+++ b/ME.html
@@ -25,7 +25,7 @@
 					<img width="100%" src="assets/me/poster.png"><br>
           <div class="des">
 					 <p>ME is a texture projection design on my own head model. 14 designs are divided into four categories--wind, flower, snow, and moon (风花雪月). 风花雪月 is a special natural scenery in my hometown Yunnan. Thus, I decided to create textures based on these four categories, with 3-4 variations under each category.</p>
-            <a class="p-link" href="https://drive.google.com/file/d/1nM32ddMPJO0TPMwAJxF2ykFei0wjNyQD/view?usp=sharing" target="_blank">Documentation</a>
+            <a class="p-link" href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A75400d79-b71b-4a10-9d1a-d3b8f739c8a3" target="_blank">Documentation</a>
           </div>
     		</div>
   		</main>
