--- a/Consciousness.html
+++ b/Consciousness.html
@@ -28,7 +28,7 @@
 					<div class="des">
 					<p>Consciousness, collaborated with Emma (Ren) Tao, is a VR escape game in which you need to read your memories and find clues to escape from the "digital slavery". It is inspired by the TV series <a class="p-link" href="https://en.wikipedia.org/wiki/White_Christmas_(Black_Mirror)" target="_blank" >"Black Mirror: White Christmas"</a>, which introduces the concept of creating a personal assistant by your own consciousness. Thus, this VR game sets the player as a "consciousness" who is trapped in a room--the personal assistant device. The players need to go back to their memories to find the password to escape from it. When the players touch certain objects, they will be able to travel between different memories.</p>
           <p>We used <a class="p-link" href="https://ephtracy.github.io/" target="_blank" >MagicaVoxel</a> to build all the models and scenes, and Unreal Engine 4 to design the game and interactions. The VR device we used to play the game in the documentation is Oculus.</p>
-          <a class="p-link" href="https://drive.google.com/file/d/1in6HsWhzDR9PNkMc86GV5gHWaw2SWGP9/view?usp=sharing" target="_blank">Game design documentation</a>
+          <a class="p-link" href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A64893dfb-a5e4-40a6-bb23-3c7aa21ef4b3" target="_blank">Game design documentation</a>
         </div>
           <br><p class="des">Below are some basic scenes from the game.</p>
           <img width="100%" src="assets/vr/mainRoom.png">
