added motion graphics work

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 									<p>A continuing collections of graphic design works.</p>
 								</div>
 							</div>
+							<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet">
+								<a href="MotionGraphics.html"><img class="grid-img" width="100%" src="assets/cover/motiongraphics.png">
+								<div class="grid-desc">
+									<a href="MotionGraphics.html"><span class="grid-title">Motion Graphics Collection</span></a>
+									<p>A collection of motion graphics work.</p>
+								</div>
+							</div>
 					</div>
 				</div>
     		</div>
