--- a/ME.html
+++ b/ME.html
@@ -21,10 +21,12 @@
   		</div>
   		<main class="mdl-layout__content">
     		<div class="page-content">
-    			<div class="full-page">			
+    			<div class="full-page">
 					<img width="100%" src="assets/me/poster.png"><br>
           <div class="des">
-					 <p>ME is a texture projection design on my own head model. 14 designs are divided into four categories--wind, flower, snow, and moon (风花雪月). 风花雪月 is a special natural scenery in my hometown Yunnan. Thus, I decided to create textures based on these four categories, with 3-4 variations under each category.</p>
+					 <p>
+						 ME is a texture projection design on my own head model. 14 designs are divided into four categories--wind, flower, snow, and moon (风花雪月). 风花雪月 is a special natural scenery in my hometown Yunnan. Thus, I decided to create textures based on these four categories, with 3-4 variations under each category.
+					 </p>
             <a class="p-link" href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A75400d79-b71b-4a10-9d1a-d3b8f739c8a3" target="_blank">Documentation</a>
           </div>
     		</div>
