--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Ruda&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
@@ -15,6 +16,7 @@
     			<a class="mdl-navigation__link" href="index.html">Home</a>
       			<a class="mdl-navigation__link" href="about.html">About</a>
       			<a class="mdl-navigation__link" href="https://github.com/Roemm" target="_blank">Code</a>
+						<a class="mdl-navigation__link" href="/assets/yiqi-portfolio.pdf" download>PDF Version</a>
     		</nav>
   		</div>
   		<main class="mdl-layout__content">
@@ -44,12 +46,19 @@
 									<p>A VR escape game in which you need to read your memories and find clues to escape from digital slavery.</p>
 								</div>
 							</div>
-	
+
 							<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet">
 								<a href="GenerativeArts.html"><img class="grid-img" width="100%" src="assets/cover/generative.png">
 								<div class="grid-desc">
 									<a href="GenerativeArts.html"><span class="grid-title">Generative Arts</span></a>
 									<p>Generative static pictures coded by particle system.</p>
+								</div>
+							</div>
+							<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet">
+								<a href="ZineProject.html"><img class="grid-img" width="100%" src="assets/cover/zine.png">
+								<div class="grid-desc">
+									<a href="ZineProject.html"><span class="grid-title">Data Zine</span></a>
+									<p>A data visualization of my daily cell phone use.</p>
 								</div>
 							</div>
 							<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet">
