--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
     			<a class="mdl-navigation__link" href="index.html">Home</a>
       			<a class="mdl-navigation__link" href="about.html">About</a>
       			<a class="mdl-navigation__link" href="https://github.com/Roemm" target="_blank">Code</a>
-						<a class="mdl-navigation__link" href="/assets/yiqi-portfolio.pdf" download>PDF Version</a>
+						<a class="mdl-navigation__link" href="/assets/yiqi-portfolio.pdf" download>Download PDF</a>
     		</nav>
   		</div>
   		<main class="mdl-layout__content">
     		<div class="page-content">
     			<div class="full-page">
 					<div class="mdl-grid">
+
+						<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet">
+							<a href="Planip.html"><img class="grid-img" width="100%" src="assets/cover/planip.png"></a>
+							<div class="grid-desc">
+								<a href="Planip.html"><span class="grid-title">Planip (Ongoing)</span></a>
+								<p>An app UX/UI design project</p>
+							</div>
+						</div>
+
 							<div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet">
 								<a href="ME.html"><img class="grid-img" width="100%" src="assets/cover/me.png"></a>
 								<div class="grid-desc">
