--- a/ME.html
+++ b/ME.html
@@ -27,7 +27,7 @@
 					 <p>
 						 ME is a texture projection design on my own head model. 14 designs are divided into four categories--wind, flower, snow, and moon (风花雪月). 风花雪月 is a special natural scenery in my hometown Yunnan. Thus, I decided to create textures based on these four categories, with 3-4 variations under each category.
 					 </p>
-            <a class="p-link" href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A75400d79-b71b-4a10-9d1a-d3b8f739c8a3" target="_blank">Documentation</a>
+					 	<a class="p-link" href="https://documentcloud.adobe.com/link/review?uri=urn%3Aaaid%3Ascds%3AUS%3Aff5a7821-4e16-4f65-b6ce-0e0f9292aff5" target="_blank">See documentation here.</a>
           </div>
     		</div>
   		</main>
