--- a/MotionGraphics.html
+++ b/MotionGraphics.html
@@ -21,14 +21,14 @@
   		</div>
   		<main class="mdl-layout__content">
     		<div class="page-content">
-    			<div class="full-page">	
+    			<div class="full-page">
                     <div class="video-wrap">
                     <iframe src="https://player.vimeo.com/video/335999014"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                    </div>		
+                    </div>
                     <br>
                     <div class="des">
                         <p class="motionTitle">Dear Lucy: A portrait of longing</p>
-                        <p>This film is about my friend Lucy. I </p>
+                        <p>This film is about my friend Lucy. </p>
                     </div>
                     <div class="video-wrap">
                         <iframe src="https://player.vimeo.com/video/335999623"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -36,9 +36,8 @@
                     <br>
                     <div class="des">
                         <p class="motionTitle">How to put an elephant in a refregerator: A serious IQ test joke.</p>
-                        <p>All the drawings here are from a Chinese painter 黄沛. She created <a class="p-link" href="http://view.inews.qq.com/a/CQC2017050205462507" target="_blank">a serial of drawings</a> which portrays all kind of people she met on the Chongqing metro. Inspired by her work, I decided to portray the metro in a different way--sound. The conversations I recoded are just casual chats about their normal life.  </p>
                     </div>
-					
+
 
     		</div>
   		</main>
